# BambooFilter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: bamboo_filter.h  bucket.h  config.h  segment.h  utility.h
src/: bamboo_filter.cc  bucket.cc  segment.cc  test.cc
tests/: run.sh  test_file.cc  test_random.cc
tests/output/: test_random.txt
